<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@mipmap/ic_home"
        android:title="@string/home"/>



    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@mipmap/ic_cart"
        android:title="@string/cart"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@mipmap/ic_mycourses"
        android:title="@string/courses"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@mipmap/ic_users"
        android:title="@string/users"/>

    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@mipmap/ic_account"
        android:title="@string/account"/>
</menu>