<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:background="@color/white"
    android:layoutDirection="locale"
    android:orientation="vertical"
    android:textDirection="locale"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SubscriptionHistoryActivity"
    tools:showIn="@layout/activity_subscription_history">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rect_grey"
        android:padding="@dimen/_9sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />
        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rect_grey"
        android:padding="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subcategory"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />
        <TextView
            android:id="@+id/tvSubCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:background="@drawable/round_rect_grey"
        android:padding="@dimen/_9sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />
        <TextView
            android:id="@+id/tvCourses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:background="@drawable/round_rect_whit_grey_border"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="@dimen/_7sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/subscription_date"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/users"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/price_usd"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/shadow_color"
                />

        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>

    </androidx.recyclerview.widget.RecyclerView></LinearLayout>

</LinearLayout>