<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10sdp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7sdp"
        android:background="@drawable/round_rect"
        >
        <TextView
            android:id="@+id/tvFrom"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/from_date"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/imgFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/round_rect"
        >
        <TextView
            android:id="@+id/tvTo"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/to_date"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/imgTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:textDirection="locale"
        android:layoutDirection="locale"
        >

        <Button
            android:id="@+id/btnApply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:text="@string/apply"
            />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:text="@string/cancel"
            android:layout_marginStart="@dimen/_16sdp"
            />

    </LinearLayout>

</LinearLayout>
