<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash"
    android:orientation="vertical"
    android:id="@+id/llMain"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:text="@string/logo"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_22sdp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/round_square_two_corner"
        android:gravity="end"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center_horizontal"
            android:text="@string/change_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/_19ssp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etOldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@mipmap/password"
            android:drawablePadding="@dimen/_7sdp"
            android:hint="@string/old_pwd"
            android:inputType="textPassword"
            android:layoutDirection="locale"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textDirection="locale"
            android:textSize="@dimen/_13ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@mipmap/password"
            android:drawablePadding="@dimen/_7sdp"
            android:hint="@string/newpwd"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="textPassword"
            android:layoutDirection="locale"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textDirection="locale"
            android:textSize="@dimen/_13ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:drawableStart="@mipmap/password"
            android:drawablePadding="@dimen/_7sdp"
            android:hint="@string/confirm_pwd"
            android:inputType="textPassword"
            android:layoutDirection="locale"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textDirection="locale"
            android:textSize="@dimen/_13ssp" />


        <TextView
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_11sdp"
            android:background="@drawable/button"
            android:gravity="center"
            android:paddingStart="@dimen/_35sdp"
            android:paddingEnd="@dimen/_35sdp"
            android:text="@string/continue_"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />


    </LinearLayout>
</LinearLayout>