<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    android:background="@color/white"
    android:layoutDirection="locale"
    android:orientation="vertical"
    android:textDirection="locale"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditInquiryActivity"
    tools:showIn="@layout/activity_edit_inquiry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rect_grey"
        android:padding="@dimen/_9sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />
        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_rect_grey"
        android:padding="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subcategory"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />
        <TextView
            android:id="@+id/tvSubCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:background="@drawable/round_rect_grey"
        android:padding="@dimen/_9sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />
        <TextView
            android:id="@+id/tvCourses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_9sdp"
        android:padding="@dimen/_9sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_of_users"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />
        <EditText
            android:id="@+id/etNoOfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_9sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            />
        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layoutDirection="locale"
        android:textDirection="locale"
        >

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:text="@string/save"
            android:layoutDirection="locale"
            android:textDirection="locale"
            android:textSize="@dimen/_12ssp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/button_grey"
            android:text="@string/reset"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:textSize="@dimen/_12ssp"
            android:layoutDirection="locale"
            android:textDirection="locale"
            />

    </LinearLayout>

</LinearLayout>