<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layoutDirection="locale"
    android:textDirection="locale"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_photo"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border_color"
        />
    <LinearLayout
        android:id="@+id/llTakePic"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/border_color"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llChoosePic"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_photo"
            android:layout_margin="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/border_color"
            />
    </LinearLayout>
</LinearLayout>
